--- a/src/style.css
+++ b/src/style.css
@@ -26,12 +26,13 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
